# rlc-one-port-count

./: AGENTS.md  Makefile  README.md  pyproject.toml
.codex/: env_fingerprint.py  maintenance.sh  setup.sh
.github/workflows/: validation.yml
data/counts/: small-r2-x3.json
docs/: bundles_and_multiedges.md  computation.md  counting_language.md  line_length_check.md  model_decisions.md  network-census-performance.md  python_api.md  results.md  simple_path_coverage.md  support_graph_enumeration.md
docs/counts/: small-r2-x3.md
docs/plan/: 00-index.md
docs/plan/00-records/: 01-update-plan-records.md  02-literature-conclusions.md  03-readme-motivation.md
docs/plan/01-dev-env/: 01-make.md  02-codex-venv.md  03-wsl.md  04-make-setup-test.md  05-scripts.md  06-contract.md
docs/plan/02-cleanup/: 01-review.md  02-legacy.md  03-generic-x.md  04-public-api.md
docs/plan/03-counting/: 02-distinct.md  03-scope.md  04-small-slice.md  05-ladenheim.md  06-full-counts.md  07-outputs.md
docs/plan/04-ladenheim/: 01-148.md  02-108.md  03-62.md  04-generators.md  05-numbering.md  06-descriptors.md  07-compare-reductions.md
docs/plan/04-tests/: 03-canon-tests.md
docs/plan/05-slices/: 01-r2-x3.md  02-ladenheim.md  03-r4-x3.md  04-r3-x5.md  05-r2-x5.md  06-r5-x3.md  07-sp8.md
docs/plan/06-biquad/: 01-r2-x5-sufficiency.md  02-sp8-sufficiency.md  03-r5-x3-sufficiency.md  04-known-classes.md  05-impedance-classes.md
docs/plan/07-tests/: 01-strategy.md  (+4 more)
scripts/: _common.ps1  _common.sh  check.ps1  check.sh  check_line_lengths.py  clean.ps1  clean.sh  lint.ps1  lint.sh  setup.ps1  setup.sh  test.ps1  validate_changes.py
src/rice/: __init__.py  cli.py  core.py
src/rlc_oneport_count/: cli.py
tests/: conftest.py  test_bundle_census.py  test_bundle_labelings.py  test_cli.py  test_count_language.py  test_counts.py  test_dev_scripts.py  test_documentation_drift.py  test_enum_reductions.py  test_line_lengths.py  test_public_api_examples.py  test_public_exports.py  test_reduced_census.py  test_reduced_signatures.py  test_support_census.py  test_validate_changes.py  test_venv_guard.py
validation/: impact.toml
(+8 files in other folders)
