[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlc-oneport-count"
version = "0.1.0"
description = "Count small two-terminal RLC one-port network topology classes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Andy Ackland / ChatGPT" }]
dependencies = [
  "networkx",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
rlc-oneport-count = "rlc_oneport_count.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
