[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rice"
version = "0.1.0"
# line-length: ignore-next-line -- legacy line pending wrap
description = "RICE — Resistor-Inductor-Capacitor Enumerator for small two-terminal RLC one-port topology classes."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Andy Ackland / ChatGPT" }]
dependencies = [
  "networkx>=3.2",
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[project.scripts]
rice = "rice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
